--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,8 +37,9 @@ iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
-    width: 268px;
+    width: 267px;
     height: 471px;
+    border-radius: 5px;
 }
 
 section#redes-sociais {
